# Caspian

./: .gitattributes  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ghpages.yml  publish.yml  test.yml
caspian/: __init__.py  cli.py
caspian/backend/: columnar.py
caspian/query/: api.py
caspian/synthesis/: bag.py
caspian/warehouse/: __init__.py  base.py  local.py  remote.py
caspian/warehouse/models/: base.py  location.py
docs/: Makefile  conf.py  index.rst
examples/: Generate Sparse Data.ipynb
tests/: test_caspian.py  test_columnar.py  test_synthesis_bag.py
