[project]
name = "caspian"
version = "0.1"
dependencies = [
    "dask",
    "distributed",
    "fastapi",
    "SQLAlchemy",
    "uvicorn"
]

[tool.poetry]
name = "caspian"
version = "0.1.0"
description = ""
authors = ["Kevin Wierman <kwierman@gmail.com>"]
readme = "README.md"
packages = [{include = "caspian"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"